--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div id="featbar">
             <h2>Features</h2>
             <div class="feat1">
-                <img src="../Images/feat1.png" alt="Community">
+                <img src="feat1.png" alt="Community">
                 <p>
                 <h3>Community</h3>
                 </p>
@@ -89,7 +89,7 @@
                 
             </div>
             <div class="feat2">
-                <img src="../Images/feat2.png" alt="Privacy">
+                <img src="feat2.png" alt="Privacy">
                 <p>
                 <h3>Privacy</h3>
                 </p>
@@ -99,7 +99,7 @@
                 
             </div>
             <div class="feat3">
-                <img src="../Images/feat3.png" alt="Friendly">
+                <img src="Images/feat3.png" alt="Friendly">
                 <p>
                 <h3>Freindly</h3>
                 </p>
